Fix payment utxo selection bug, add bsv-20 functions, template rawtx params to lock, inscribe functions

--- a/index.html
+++ b/index.html
@@ -31,3 +31,4 @@
 </body>
 <script src="./scripts/SHUAllet.js"></script>
 <script src="./scripts/oneSatOrdinals.js"></script>
+<script src="./scripts/bsv20.js"></script>
