Basic UTXO caching in indexedDB

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="./scripts/bHelpers.js"></script>
         <script src="./scripts/helpers.js"></script>
         <script src="./scripts/bsv-lock.js"></script>
+        <script src="./scripts/idb.js"></script>
     </head>
 </html>
 <body>SHUAllet.js Demo
